Fix: Shadow between containers is more black now, thus more visible

--- a/css/global.css
+++ b/css/global.css
@@ -30,8 +30,8 @@
 }
 
 .shadow-right-container {
-    -webkit-box-shadow: 2px 0 5px -2px #888;
-            box-shadow: 2px 0 5px -2px #888;
+    -webkit-box-shadow: 1px 0 5px -2px #000;
+            box-shadow: 1px 0 5px -2px #000;
 }
 
 .navbar {
